# project-1

./: .gitignore  CMakeLists.txt  Readme.md  answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  RelativeIndex.h  SearchServer.h
resources/: file001.txt  file003.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
